# dsf-may-day-2024

./: .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
darts/: index.html
docs/: darts.md  project_setup.md  statsmodels.md
project_setup/: index.html
search/: search_index.json
src/data/: preprocess.py
src/modelling/: sm_time_series.py
src/models/: dt_time_series.py  sk_time_series.py  sm_time_series.py  st_time_series.py
statsmodels/: index.html
